iptables/iptables_home_proxy.rules
# /etc/sysctl.d/99-forward.conf
# net.ipv4.ip_forward=1
# sudo sysctl -w net.ipv4.ip_forward=1

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:SQUID_LAN - [0:0]

# Не трогаем назначения в локальные/служебные сети
-A SQUID_LAN -d 0.0.0.0/8 -j RETURN
-A SQUID_LAN -d 10.0.0.0/8 -j RETURN
-A SQUID_LAN -d 127.0.0.0/8 -j RETURN
-A SQUID_LAN -d 169.254.0.0/16 -j RETURN
-A SQUID_LAN -d 172.16.0.0/12 -j RETURN
-A SQUID_LAN -d 192.168.0.0/16 -j RETURN
-A SQUID_LAN -d 224.0.0.0/4 -j RETURN
-A SQUID_LAN -d 240.0.0.0/4 -j RETURN

# Не трогаем docker-сети
-A SQUID_LAN -d 172.17.0.0/16 -j RETURN
-A SQUID_LAN -d 172.18.0.0/16 -j RETURN

# HTTP клиентов LAN -> squid intercept
-A SQUID_LAN -i enp0s31f6 -s 192.168.100.0/24 -p tcp --dport 80 -j REDIRECT --to-ports 8081

# HTTPS клиентов LAN -> squid intercept
-A SQUID_LAN -i enp0s31f6 -s 192.168.100.0/24 -p tcp --dport 443 -j REDIRECT --to-ports 8082

# Применяем только к входящему транзитному трафику из LAN
-A PREROUTING -i enp0s31f6 -s 192.168.100.0/24 -p tcp -j SQUID_LAN

COMMIT
